--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta name="description" content="Sujin Lee | Creative Developer">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
     <link rel="icon" type="image/png" href="{% static 'image/background/favicon_logo.png' %}">
     {% block title %}
     <title>Sujin Lee - A Creative Developer</title>
