--- a/myblog/templates/blog/post_edit.html
+++ b/myblog/templates/blog/post_edit.html
@@ -22,8 +22,8 @@
 
 
 <header class="page_title">
-  <button class="btn_back material-icons">mode_edit</button>
-  <h1>write new blog</h1>
+  <button class="btn_back icon-notes"></button>
+  <h1>New blog</h1>
 </header>
 <!--
 fields = ('category', 'image', 'title', 'summary', 'body', 'tag', 'slug')-->
@@ -34,6 +34,7 @@ fields = ('category', 'image', 'title', 'summary', 'body', 'tag', 'slug')-->
      {{ form.title }}
      {{ form.summary }}
      {{ form.body }}
+     
      {{ form.tag }}
      {{ form.slug }}
 
@@ -56,8 +57,8 @@ fields = ('category', 'image', 'title', 'summary', 'body', 'tag', 'slug')-->
 
 </div>
 
-
   </div>
+
 <div class="form_view">
   </div>
 {% endblock %}
