--- a/myblog/templates/blog/post_list.html
+++ b/myblog/templates/blog/post_list.html
@@ -43,4 +43,9 @@
   </div>
   {% endif %}
 </div>
+  {% if user.is_authenticated %}
+  
+  <a href="{% url 'post_new' %}"><button class="btn_write material-icons">create</button></a>
+  {% endif %}
+
 {% endblock content %}
