--- a/myblog/templates/blog/base.html
+++ b/myblog/templates/blog/base.html
@@ -28,10 +28,8 @@
     <!-- fonts -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/simple-line-icons/2.4.1/css/simple-line-icons.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSans-kr.css">
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Source+Code+Pro">
-    <link rel="stylesheet" href="//cdn.jsdelivr.net/devicons/1.8.0/css/devicons.min.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700" rel="stylesheet">
     <!-- css -->
     <link rel="stylesheet" href="{% static 'dist/css/style.css' %}">
@@ -94,15 +92,13 @@
 
     {% block basejsblock %}
     <!-- javascript -->
-    <!--<script src="{% static 'dist/js/script.min.js' %}"></script>-->
     
     <!-- disqus -->
-    <script scr="//sujinlee.disqus.com/embed.js"></script>
-    <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>
+    <!--<script scr="//sujinlee.disqus.com/embed.js"></script>
+    <script src="//sujinlee.disqus.com/count.js" id="dsq-count-scr" async></script>-->
     
     <!-- build:js -->
     <script src="{% static 'src/js/menu.js' %}"></script>
-    <script src="{% static 'src/js/social.js' %}"></script>
     <!-- endbuild -->
     
     <!--google-analytics-->
