--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -54,30 +54,27 @@
         </div>
         <span class="like_count">{{ post.likes }}</span>
       </li>
-      <a href="{% url 'project_detail' slug=project.slug %}#disqus_thread"></a>
       <li><span class="icon-bubble"></span><a href="{% url 'post_detail' slug=post.slug %}#disqus_thread"></a></li>
     </ul>
-    <ul class="btn_share">
-      <a class="facebook share"
+    <ul>
+      <a class="facebook btn_share"
         href = "http://www.facebook.com/share.php?u=http://www.sujinlee.me/blog/{{ post.slug }}"
-        target="_blank" onclick="return fbshare()">
+        onclick="return fbshare()">
         <li class="icon-social-facebook"></li>
       </a>
-      <a class="twitter share"
+      <a class="twitter btn_share"
         href="http://twitter.com/share?url=http://www.sujinlee.me/blog/{{ post.slug }}
         &amp;text={{ post.title }} http://www.sujinlee.me/blog/{{ post.slug }} via @sujinleeme &amp;hashtags={{ post.category.title }}"
-        target="_blank" title="Twitter Share">
+        title="Twitter Share">
         <li class="icon-social-twitter"></li>
       </a>
-      <a class="google_plus share"
+      <a class="google_plus btn_share"
         href="https://plus.google.com/share?url=http://www.sujinlee.me/blog/{{ post.slug }}"
-        target="_blank" title="Google Plus Share">
+        title="Google Plus Share">
         <li class="icon-social-google"></li>
       </a>
     </ul>
   </footer>
-  
- 
 </article>
 <nav id="pagination">
   {% if previous %}
@@ -98,7 +95,8 @@
   </div>
   {% endif %}
 </nav>
-<div class="disqus" id="disqus_thread"></div>
+
+<!--<div class="disqus" id="disqus_thread"></div>-->
 <button class="btn_expand material-icons">keyboard_arrow_left</button>
 <button class="btn_gototop material-icons">keyboard_arrow_up</button>
 {% endblock %}
@@ -110,6 +108,7 @@
 {% endblock %}
 
 {% block facebookShare %}
+
 <script>
   function fbshare() {
     FB.ui({
@@ -117,7 +116,7 @@
         action_type: 'og.shares',
         action_properties: JSON.stringify({
           object: {
-            'og:url': 'http: //sujinlee.me/blog/{{ blog.slug }}',
+            'og:url': 'http://sujinlee.me/blog/{{ blog.slug }}',
             'og:title': '{{ blog.title }}',
             'og:description': '{{ blog.summary|truncatechars:230 }}',
             'og:image': 'http://www.sujinlee.me/{{ blog.image.url }}/',
