--- a/myblog/templates/blog/about.html
+++ b/myblog/templates/blog/about.html
@@ -26,10 +26,10 @@
       Realize that everything connects you to everything else. - Leonardo da Vinci</i><br>
     </p>
     <p>Hello, World! I am Sujin Lee from Seoul, Korea.<br>I write code. I play music.</p>
-    <p>After completing my undergraduate studies in Music Composition & Education, I have pursued my passions of music and programming with equal vigor, aiming to make creative work that inspires. I want to use programming to unlock the secret of music masterpiece in the nearest future. I had learned classical music since I was young, but I have been born again as python and web developer.</p>
-    <p>I am currently working in CONNECT foundation, which was established by Naver Corp. to provide software engineering education to young Koreans.</p>
-    <p>While I enjoy all aspects of my job, I run Django Girl Seoul Community with friends to encourage women to jump into technology lately and we manage workshops about programming in Python and Django.</p>
-    <p>If you want to say hello, I'm mostly on <a href="https://twitter.com/sujinleeme">twitter</a> or <a href="https://www.facebook.com/sujiniworld">facebook</a>. I always love hearing about you and new projects.</p>
+    <p>After completing my undergraduate studies in Music Composition & Education, I have pursued my passions of music and programming with equal vigor, aiming to make creative work that inspires. I want to use programming to unlock the secret of music masterpiece in the nearest future. I had learned classical music since I was young, but I have been born again as web developer.</p>
+    <p>Last two years, I worked as a software platform designer for online course platform in CONNECT foundation, which was established by Naver Corp. to provide software engineering education to young Koreans.</p>
+    <p>While I enjoy all aspects of my job and do some creative projects, I run Django Girl Seoul Community with friends to encourage women to jump into technology lately and we manage workshops about programming in Python and Django.</p>
+    <p>If you want to say hello, I'm mostly on <a href="https://twitter.com/sujinleeme">twitter</a> or <a href="https://www.facebook.com/sujinlee.me">facebook</a>. I always love hearing about you and new projects.</p>
   </div>
 </div>
 <header class="page_title">
