--- a/myblog/templates/blog/index.html
+++ b/myblog/templates/blog/index.html
@@ -25,3 +25,7 @@
   </div>
   <!--<div class="straight_line"></div>-->
 {% endblock %}
+
+{% block jsblock %}
+<script src="{% static 'index.js' %}"></script>
+{% endblock %}
