--- a/myblog/templates/blog/post_detail.html
+++ b/myblog/templates/blog/post_detail.html
@@ -8,7 +8,7 @@
 
 {% block ogtags %}
 <meta property="og:type" content="Sujin Lee:Post" />
-<meta property="og:title" content="{{ post.title }}" />
+<meta property="og:title" content="{{ post.title }} - Sujin Lee" />
 <meta property="og:description" content="{{ post.summary|truncatechars:230 }}" />
 <meta property="og:image" content="http://www.sujinlee.me/{{ post.image.url }}" />
 <meta property="og:url" content="http://www.sujinlee.me/blog/{{post.slug }}/" />
@@ -21,7 +21,12 @@
 </header>
 
 <article>
-  <picture><img src="{{ post.image.url }}" ></picture>
+  <picture>
+    <div class="placeholder" data-large="{{ post.image.url }}">
+      <img src="{{ post.image_thumbnail.url }}" class="mainPostImg img-small">
+      <div class="img_area"></div>
+    </div>
+  </picture>
   <header class="post_title">
     <h1>{{ post.title }}</h1>
     {% if post.published_date %}
@@ -104,11 +109,12 @@
 {% block jsblock %}
 <script src="{% static 'src/js/highlight.pack.js' %}"></script>
 <script src="{% static 'src/js/post_detail.js' %}"></script>
-<script>hljs.initHighlightingOnLoad();</script>
+<script>hljs.initHighlightingOnLoad();
+        window.onload = loadPreImage();
+</script>
 {% endblock %}
 
 {% block facebookShare %}
-
 <script>
   function fbshare() {
     FB.ui({
