--- a/myblog/templates/blog/project_list.html
+++ b/myblog/templates/blog/project_list.html
@@ -6,7 +6,7 @@
 
 {% block ogtags %}
 <meta property="og:type" content="Sujin Lee:Post" />
-<meta property="og:title" content="Blog - Sujin Lee" />
+<meta property="og:title" content="Project - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
 <meta property="og:url" content="http://www.sujinlee.me/project/" />
@@ -21,7 +21,10 @@
   <ul id="lst_project_wrap">
     {% for project in projects %}
     <li class="project_ele" onclick="location.href='{% url 'project_detail' slug=project.slug %}';">
-      <img src="{{ project.image.url }}">
+       <div class="placeholder" data-large="{{ project.image.url }}">
+        <img src="{{ project.image_thumbnail.url }}" class="img-small">
+        <div class="img_area"></div>
+      </div>
       <header>
         <span class="date">{{ project.published_date }}</span>
         <h3>{{ project.summary|truncatechars:30 }}</h3>
@@ -40,3 +43,7 @@
   {% endif %}
 </div>
 {% endblock content %}
+
+{% block jsblock %}
+<script>window.onload = loadPreImage();</script>
+{% endblock %}
