--- a/myblog/templates/blog/tagging_post_list.html
+++ b/myblog/templates/blog/tagging_post_list.html
@@ -6,7 +6,7 @@
 
 {% block ogtags %}
 <meta property="og:type" content="Sujin Lee:Post" />
-<meta property="og:title" content="Blog - Sujin Lee" />
+<meta property="og:title" content="{{ tag.name }} - Sujin Lee" />
 <meta property="og:description" content="Creative Developer" />
 <meta property="og:image" content="http://www.sujinlee.me/image/background/profile-about.png" />
 <meta property="og:url" content="http://www.sujinlee.me/project/" />
@@ -14,7 +14,7 @@
 
 {% block content %}
 <header class="page_title">
-  <h1>BLOG : tag : {{ tag.name }} </h1>
+  <h1>BLOG : tag : {{ tag.name }}</h1>
 </header>
 <div id="main_content_v2">
   {% if object_list %}
